# minitensor

./: .gitignore  .gitmodules  CMakeLists.txt
include/minitensor/: .clang-format  Array.hpp  Shape.hpp  Tensor.hpp  TensorIterator.hpp  defines.hpp  utilities.hpp
tests/: array.cpp  shape.cpp  tensor.cpp
